force-app/main/default/objects/TrackIT__Computer_Maintenance_Transaction__c/TrackIT__Computer_Maintenance_Transaction__c.object-meta.xml
<CustomObject>
    <description>Stores computer maintenance transaction information in Facility Manager</description>
    <label>Computer Maintenance Transaction</label>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Computer Maintenance Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>