force-app/main/default/objects/TrackIT__Computer_Maintenance_Transaction__c/fields/TrackIT__Item__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Item__c</fullName>
    <description>Maintenance Transactions Detail Part of the Relationship</description>
    <label>Item</label>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipLabel>Computer Maintenance Transactions</relationshipLabel>
    <relationshipName>Computer_Maintenance_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>