force-app/main/default/objects/TrackIT__Computer_Maintenance_Transaction__c/fields/TrackIT__Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
                <default>true</default>
                <label>Maintenance</label>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>