force-app/main/default/objects/TrackIT__Computer_Maintenance_Transaction__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Item__c</columns>
    <columns>TrackIT__Date_Time__c</columns>
    <columns>TrackIT__Type__c</columns>
    <columns>TrackIT__Maintenance_Tasks__c</columns>
    <columns>TrackIT__Notes__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>